Fix(site): Eliminate extra white space below figure

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -16,7 +16,7 @@
     }
 
     .title {
-      opacity: 0.2;
+      opacity: 0.1;
     }
   }
 }
@@ -35,12 +35,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  line-height: 0;
+
+  > figcaption {
+    line-height: 1.2;
+  }
 }
 
 .image {
   font-size: var(--fontSizeSmall);
   font-weight: normal;
   height: 150px;
+  line-height: 1.2;
   object-fit: cover;
   object-position: center;
   text-align: center;
